--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,6 +57,8 @@ logging:
 
 springdoc:
   api-docs:
-    path: /api-docs
+    path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
+    enabled: true
+  show-actuator: false
